fix: honor S3 maxKeys as total cap, guard pagination loop, stream Athena STORE
- S3 list caps total results at maxKeys (not per-page) and breaks safely
  when a truncated response yields no advancing marker
- Athena STORE writes pages as they arrive instead of buffering all in
  memory, with header skipped only on the first page

Addresses review on #742.